# Unified-LLM

./: .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  2025-09-26-extractor-to-kg.txt  2025-09-27-extractor.txt  2025-10-09-edit.txt  2025-10-10-arch.txt  2025-10-11-gggrrr.txt  2025-10-11-sdgds.txt  2025-10-12-ok-we-have-been-going-round-and-round-with-a-tool.txt  2025-10-12-redo-server.txt  2025-10-12-v2.txt  2025-10-17-media.txt  2025-10-17-media10.txt  2025-10-17-media11.txt  2025-10-17-media12.txt  2025-10-17-media13.txt  2025-10-17-media2.txt  2025-10-17-media3.txt  2025-10-17-media4.txt  2025-10-17-media5.txt  2025-10-17-media6.txt  2025-10-17-media7.txt  2025-10-17-media8.txt  2025-10-17-media9.txt  2025-10-18-mc1.txt  2025-10-18-media-config.txt  2025-10-18-simplify-config.txt  2025-10-19-server-issue.txt  2025-10-19-server-media-fix.txt  2025-10-19-server-media-problem.txt  ACKNOWLEDGEMENTS.md  API_DOCUMENTATION_CLARIFICATION.md  APPS_STREAMING_INVESTIGATION.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CHAT_COMPLETIONS_DOCS_SUMMARY.md  CLAUDE.md  CLAUDE_FINAL.md  (+169 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-ghcr.yml  release.yml
abstractcore/: README.md  __init__.py  acore.puml  download.py
abstractcore/apps/: README.md  __init__.py  __main__.py  app_config_utils.py  deepsearch.py  extractor.py  intent.py  judge.py  summarizer.py
abstractcore/architectures/: README.md  detection.py  enums.py  response_postprocessing.py
abstractcore/assets/: README.md  architecture_formats.json  bloc-schema.jsonld  model_capabilities.json  semantic_models.md  session_schema.json
abstractcore/capabilities/: __init__.py  errors.py  host.py  music_selectors.py  registry.py  types.py  vision_catalog.py
abstractcore/cli/: __init__.py  main.py  vision_config.py
abstractcore/comms/: __init__.py  email_digests.py
abstractcore/compression/: README.md  __init__.py  analytics.py  cache.py  config.py  exceptions.py  glyph_processor.py  optimizer.py  orchestrator.py  pil_text_renderer.py  quality.py  renderer.py  rich_text_renderer.py  text_formatter.py  vision_compressor.py
abstractcore/config/: README.md  __init__.py  main.py  manager.py  vision_config.py
abstractcore/core/: README.md  __init__.py  bloc_kv.py  bloc_metadata.py  cached_session.py  enums.py  factory.py  file_blocs.py  file_boxes.py  interface.py  multimodal_generation.py  output_specs.py  retry.py  session.py  types.py
abstractcore/embeddings/: README.md  __init__.py  manager.py  models.py
abstractcore/endpoint/: __init__.py  app.py
abstractcore/events/: README.md  __init__.py
abstractcore/exceptions/: README.md  __init__.py
abstractcore/mcp/: __init__.py  client.py  factory.py  naming.py  stdio_client.py  tool_source.py
abstractcore/media/: README.md  __init__.py  auto_handler.py  base.py  capabilities.py  enrichment.py  types.py  vision_fallback.py
abstractcore/processing/: README.md  __init__.py  basic_deepsearch.py  basic_extractor.py  basic_intent.py  basic_judge.py  basic_summarizer.py
abstractcore/providers/: README.md  __init__.py  anthropic_provider.py  base.py  huggingface_provider.py  (+12 more)
abstractllm/: __init__.py
abstractllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bugs/: ABSTRACTCORE_BUG_REPORT.md  abstractcore_bug_reproduction.py
configs/: emails.yaml
docs/: INDEX.md  KnowledgeBase.md  README.md  acore-cli.md  api-reference.md  api.md  api_reference.md  architecture-model-checks.md  architecture-model-detection.md  architecture.md  async-guide.md  basic-extractor.md  basic-judge.md  basic-summarizer.md  capabilities.md  centralized-config.md  chat-compaction.md  cli-usage.md  codex-cli-integration.md  common-mistakes.md  comparison.md  compatibility-agentic-cli.md  concurrency.md  embeddings.md  endpoint.md  events.md  examples.md  fallbacks.md  faq.md  generation-parameters.md  getting-started.md  glyph-compression.md  glyphs.md  huggingface-model-compatibility.md  improved-structured-response.md  interaction-tracing.md  internal-cli.md  known_issues.md  mcp.md  media-handling-system.md  (+26 more)
embeddings/: lmstudio_text_embedding_nomic_embed_text_v1.5@q6_k_cache.pkl
examples/: README.md  async_cli_demo.py  complete_rag_example.py  embeddings_benchmark.py  embeddings_demo.py  embeddings_hf_demo.py  example_structured_output.py  favored_models_demo.py  glyph_complete_example.py  glyph_compression_demo.py  interaction_tracing_demo.py  list_supported_formats.py  local_qwen3_5_thinking_probe.py  matrix_operations_demo.py  mlx_concurrency_benchmark.py  model_filtering_demo.py  prompt_cache_boxes_demo.py  prompt_cache_repl_demo.py  qwen_thinking_repl.py  real_models_showcase.py  reasoning_control_demo.py  simple_embeddings_examples.py  skim_tools_benchmark.py  streaming_vs_non_streaming.py  tool_usage_advanced.py  tool_usage_basic.py  tooltag_cli_demo.py
tests/: README_SEED_TESTING.md  README_VISION_TESTING.md  __init__.py  conftest.py  manual_seed_verification.py  provider_stubs.py  run_vision_tests.py  test_abstractendpoint_singleton_provider.py  test_agentic_cli_compatibility.py  test_all_specified_providers.py  test_basic_session.py  test_basic_summarizer.py  test_bloc_kv.py  test_bloc_kv_endpoint.py  test_bloc_metadata_json_extract.py  test_cached_session_kv_mode.py  test_capabilities_registry.py  test_capabilities_registry_preferred_backends_from_config.py  test_complete_integration.py  test_comprehensive_events.py  test_consistency.py  test_core_components.py  test_critical_streaming_tool_fix.py  test_direct_vs_server.py  test_email_digests.py  test_embedding_model_token_warnings.py  test_embeddings.py  test_embeddings_integration.py  test_embeddings_llm_integration.py  test_embeddings_matrix_operations.py  test_embeddings_no_mock.py  test_embeddings_real.py  test_embeddings_semantic_validation.py  test_embeddings_simple.py  test_enhanced_prompt.py  test_environment_variable_tool_call_tags.py  test_factory.py  test_file_bloc_store_unit.py  test_file_boxes_cached_session.py  test_final_comprehensive.py  (+59 more)
(+746 files in other folders)
